--- a/index.html
+++ b/index.html
@@ -7,20 +7,46 @@
   <title>WeatherCheck</title>
   <style>
     /* add some style here later  */
+    body {
+      margin: 20px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: 200px 200px 200px;
+      grid-gap: 10px;
+      background-color: #fff;
+      color: #444;
+      position: absolute;
+    }
+    .box {
+      background-color: #444;
+      color: #fff;
+      border-radius: 5px;
+      padding: 50px;
+      font-size: 150%;
+    }
+
   </style>
 </head>
 <body>
-  <div>
-    <div id = "inputZipCode">
+  <div class ="grid">
+    <div class ="box input" id = "inputZipCode" >
       <input type = "text" id = "userInput"/>
       <button id = "button" onclick = "sendZipCode()">Submit</button>
     </div>
-    <div id = "displayWeather">
+    <div class = "box current" id = "displayWeather">
       <!-- display weather here -->
       <div id = "temperature"></div>
       <div id = "conditions"></div>
       <div id = "zipCode"></div>
     </div>
+  <div class = "box dayOne"><p>dayOne</p></div>
+  <div class = "box dayTwo"><p>dayTwo</p></div>
+  <div class = "box dayThree"><p>dayThree</p></div>
+  <div class = "box dayFour"><p>dayFour</p></div>
+  <div class = "box dayFive"><p>dayFive</p></div>
+  <div class = "box daySix"><p>daySix</p></div>
+  <div class = "box daySeven"><p>daySeven</p></div>
   </div>
 </body>
 <script src='main.js'></script>
