Turned it into extension. Using hastily made icons.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div>
     <div id = "inputZipCode">
-      <input type = "text" id = "userInput"/>
-      <button id = "button" onclick = "sendZipCode()">Submit</button>
+      <input type = "text" id="userInput"/>
+      <button id="button">Submit</button>
     </div>
     <div id = "displayWeather">
       <!-- display weather here -->
