--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       background-color: #444;
       color: #fff;
       border-radius: 5px;
-      padding: 50px;
+      padding: 15%;
       font-size: 150%;
     }
 
@@ -32,7 +32,7 @@
   <div class ="grid">
     <div class ="box input" id = "inputZipCode" >
       <input type = "text" id = "userInput"/>
-      <button id = "button" onclick = "sendZipCode()">Submit</button>
+      <button id = "button">Submit</button>
     </div>
     <div class = "box current" id = "displayWeather">
       <!-- display weather here -->
@@ -40,13 +40,15 @@
       <div id = "conditions"></div>
       <div id = "zipCode"></div>
     </div>
-  <div class = "box dayOne"><p>dayOne</p></div>
+  <!--- 
+    <div class = "box dayOne"><p>dayOne</p></div>
   <div class = "box dayTwo"><p>dayTwo</p></div>
   <div class = "box dayThree"><p>dayThree</p></div>
   <div class = "box dayFour"><p>dayFour</p></div>
   <div class = "box dayFive"><p>dayFive</p></div>
   <div class = "box daySix"><p>daySix</p></div>
   <div class = "box daySeven"><p>daySeven</p></div>
+  -->
   </div>
 </body>
 <script src='main.js'></script>
